@@ -10,7 +10,7 @@
   </startup>
   <!-- <system.windows.forms jitDebugging="true" /> -->
 	<runtime>
-    <developmentMode enabled="true"/>
+    <!-- <developmentMode enabled="true"/> -->
     
     <!-- https://docs.microsoft.com/en-us/dotnet/framework/configure-apps/file-schema/runtime/thread-useallcpugroups-element -->
     <!--  -->
@@ -20,53 +20,14 @@
   </runtime>
  <userSettings>
   <Taskmaster.Properties.Settings>
-   <setting name="ImmediateSave" serializeAs="String">
-    <value>False</value>
-   </setting>
-   <setting name="ShowInTaskbar" serializeAs="String">
-    <value>False</value>
-   </setting>
-   <setting name="AutoOpenMenus" serializeAs="String">
-    <value>False</value>
-   </setting>
-   <setting name="ExitConfirm" serializeAs="String">
-    <value>True</value>
-   </setting>
-   <setting name="WMIQueries" serializeAs="String">
-    <value>False</value>
-   </setting>
-   <setting name="WMIPolling" serializeAs="String">
-    <value>True</value>
-   </setting>
-   <setting name="WMIPollingInterval" serializeAs="String">
-    <value>5</value>
-   </setting>
-   <setting name="PathCacheLimit" serializeAs="String">
-    <value>200</value>
-   </setting>
-   <setting name="SelfAffinity" serializeAs="String">
-    <value>-1</value>
-   </setting>
-   <setting name="SelfOptimize" serializeAs="String">
-    <value>True</value>
-   </setting>
-   <setting name="ShowOnStart" serializeAs="String">
-    <value>False</value>
-   </setting>
-   <setting name="ShowProcessAdjusts" serializeAs="String">
-    <value>True</value>
-   </setting>
-   <setting name="ShowSessionActions" serializeAs="String">
-    <value>True</value>
-   </setting>
    <setting name="UpgradeNeeded" serializeAs="String">
     <value>True</value>
    </setting>
-   <setting name="LicenseAccepted" serializeAs="String">
-    <value>False</value>
+   <setting name="AffinityStyle" serializeAs="String">
+    <value>1</value>
    </setting>
-   <setting name="Dirty" serializeAs="String">
-    <value>True</value>
+   <setting name="DeleteOldSettings" serializeAs="String">
+    <value>False</value>
    </setting>
   </Taskmaster.Properties.Settings>
  </userSettings>
