@@ -6,6 +6,10 @@ Comprehensive changes can be found in Git change history:
 ### 2018-09-08
 	Fixed: Potential permanent resource leakage related to static event handlers.
 	Changed: IP changes are now in Info logging level instead of Debug.
+	Added: Option to show affinity mask as bitmask or as decimal. Defaults to decimal. Bitmask is also no longer in reversed order.
+	Changed: UI no longer shows "-- Any --" when nothing is configured and instead shows simply nothing.
+	Added: Properties.Settings is now used for some configuration options, namely the new affinity mask option.
+		This has some problems associated with it and may be transferred to the old .ini format.
 ### 2018-08-28
 	Fixed: If no default microphone is set up, microphone manager won't crash the entire app.
 	Added: Detect session end for clean shutdown.
